--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
+    "mysql2": "^3.9.7",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7"
   }
